Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36152

mariadb-backup --backup crash during innodb_undo_log_truncate=ON, innodb_encrypt_log=ON

    XMLWordPrintable

Details

    Description

      cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo using GCC 14.2.0 would report the following warnings:

      10.11 49d976feaa9de7d7d1cdde1560d43e637f7b607b

      In file included from /usr/include/string.h:548,
                       from /mariadb/10.11/include/m_string.h:35,
                       from /mariadb/10.11/storage/innobase/include/univ.i:45,
                       from /mariadb/10.11/storage/innobase/log/log0recv.cc:27:
      In function ‘void* memcpy(void*, const void*, size_t)’,
          inlined from ‘void* recv_buf::memcpy(void*, size_t) const’ at /mariadb/10.11/storage/innobase/log/log0recv.cc:2239:20,
          inlined from ‘const byte* recv_buf::copy_if_needed(const byte*, byte*, recv_buf, size_t)’ at /mariadb/10.11/storage/innobase/log/log0recv.cc:2283:17,
          inlined from ‘recv_sys_t::parse_mtr_result recv_sys_t::parse(source&, bool) [with source = recv_buf; store storing = recv_sys_t::BACKUP]’ at /mariadb/10.11/storage/innobase/log/log0recv.cc:2814:29:
      /usr/include/x86_64-linux-gnu/bits/string_fortified.h:29:33: warning: argument 1 null where non-null expected [-Wnonnull]
         29 |   return __builtin___memcpy_chk (__dest, __src, __len,
            |          ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
         30 |                                  __glibc_objsize0 (__dest));
            |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~
      /usr/include/x86_64-linux-gnu/bits/string_fortified.h:29:33: note: in a call to built-in function ‘void* __builtin_memcpy(void*, const void*, long unsigned int)’
      In function ‘void* memcpy(void*, const void*, size_t)’,
          inlined from ‘void* recv_buf::memcpy(void*, size_t) const’ at /mariadb/10.11/storage/innobase/log/log0recv.cc:2239:20,
          inlined from ‘const byte* recv_buf::copy_if_needed(const byte*, byte*, recv_buf, size_t)’ at /mariadb/10.11/storage/innobase/log/log0recv.cc:2283:17,
          inlined from ‘recv_sys_t::parse_mtr_result recv_sys_t::parse(source&, bool) [with source = recv_buf; store storing = recv_sys_t::BACKUP]’ at /mariadb/10.11/storage/innobase/log/log0recv.cc:2862:29:
      /usr/include/x86_64-linux-gnu/bits/string_fortified.h:29:33: warning: argument 1 null where non-null expected [-Wnonnull]
         29 |   return __builtin___memcpy_chk (__dest, __src, __len,
            |          ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
         30 |                                  __glibc_objsize0 (__dest));
            |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~
      /usr/include/x86_64-linux-gnu/bits/string_fortified.h:29:33: note: in a call to built-in function ‘void* __builtin_memcpy(void*, const void*, long unsigned int)’
      

      These warnings seem to be legitimate. The first one is about the contents of an EXTENDED record. The second warning is about some code that was unreachable for storing==BACKUP until the fix of MDEV-35830.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.75h
                  3.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.